[package]
edition = "2021"
name = "catastrophe-risk-modelling"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = {version = "1", features = ["derive"]}

[dependencies.pyo3]
features = ["extension-module"]
version = "0.13"

[lib]
crate-type = ["rlib", "cdylib"]
name = "catastrophe_risk_modelling"
